[gd_scene load_steps=20 format=2]

[ext_resource path="res://characters/Character.gd" type="Script" id=1]
[ext_resource path="res://characters/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://states/Idle.gd" type="Script" id=3]
[ext_resource path="res://states/State.gd" type="Script" id=4]
[ext_resource path="res://states/Block.gd" type="Script" id=5]
[ext_resource path="res://states/Hurt.gd" type="Script" id=6]
[ext_resource path="res://states/AirHurt.gd" type="Script" id=7]
[ext_resource path="res://states/Knockdown.gd" type="Script" id=8]
[ext_resource path="res://states/Recover.gd" type="Script" id=9]
[ext_resource path="res://states/AirRecover.gd" type="Script" id=10]
[ext_resource path="res://states/Walk.gd" type="Script" id=11]
[ext_resource path="res://states/Startup_Jump.gd" type="Script" id=12]
[ext_resource path="res://states/Jump.gd" type="Script" id=13]
[ext_resource path="res://states/Attack.gd" type="Script" id=14]
[ext_resource path="res://states/AirAttack.gd" type="Script" id=15]
[ext_resource path="res://controllers/Controller.gd" type="Script" id=16]
[ext_resource path="res://controllers/AiController.gd" type="Script" id=17]
[ext_resource path="res://controllers/PlayerController.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 85 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
init_state = NodePath("StateMachine/Idle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="HurtBox" type="Area2D" parent="."]
monitoring = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
region_enabled = true
region_rect = Rect2( 0, 0, 200, 200 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_process_mode = 0

[node name="StateMachine" type="Node" parent="."]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Ko" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Block"]
process_mode = 0
one_shot = true

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateMachine/Hurt"]
process_mode = 0
one_shot = true

[node name="AirHurt" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/AirHurt"]
process_mode = 0
one_shot = true

[node name="Knockdown" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Knockdown"]

[node name="Recover" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="AirRecover" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Startup_Jump" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Active_Jump" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Startup_Punch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_Punch" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_Punch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_Punch2" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_Punch2" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_Punch2" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_Punch3" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_Punch3" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_Punch3" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_AirPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_AirPunch" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Recovery_AirPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_SpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_SpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_SpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_AirSpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_AirSpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Recovery_AirSpecialPunch" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_Kick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_Kick" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_Kick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_AirKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_AirKick" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Recovery_AirKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_SpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_SpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Recovery_SpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Startup_AirSpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Active_AirSpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Recovery_AirSpecialKick" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Controller" type="Node" parent="."]

[node name="DefaultController" type="Node" parent="Controller"]
script = ExtResource( 16 )

[node name="AiController" type="Node" parent="Controller"]
script = ExtResource( 17 )

[node name="PlayerController" type="Node" parent="Controller"]
script = ExtResource( 18 )

[node name="Debug" type="Control" parent="."]
editor/display_folded = true

[node name="Label" type="Label" parent="Debug"]
margin_right = 40.0
margin_bottom = 14.0
text = "State"

[node name="Label5" type="Label" parent="Debug"]
margin_left = 4.64395
margin_top = -17.9125
margin_right = 44.644
margin_bottom = -3.91248
text = "Pos"

[node name="Label2" type="Label" parent="Debug"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 35.0
text = "HP"

[node name="Label3" type="Label" parent="Debug"]
margin_left = 1.0
margin_top = 34.0
margin_right = 41.0
margin_bottom = 48.0
text = "Floor"

[node name="Label4" type="Label" parent="Debug"]
margin_left = 1.32684
margin_top = 50.4203
margin_right = 41.3268
margin_bottom = 64.4203
text = "Vel"

[connection signal="area_shape_entered" from="HitBox" to="." method="_on_HitBox_area_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/Block/Timer" to="StateMachine/Block" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Hurt/Timer" to="StateMachine/Hurt" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Knockdown/Timer" to="StateMachine/Knockdown" method="_on_Timer_timeout"]
